--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "yun-token-sale",
   "version": "1.0.0",
   "description": "Yun Token Sale ICO",
-  "main": "truffle-config.js",
+  "main": "../../AppData/Roaming/JetBrains/WebStorm2020.3/extensions/truffle-config.js",
   "directories": {
     "test": "test"
   },
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.3.0",
+    "fs-extra": "^3.0.1",
     "truffle-hdwallet-provider": "^1.0.17"
   }
 }
